# delaunator-cpp

./: CMakeLists.txt
cmake/: delaunator_config.hpp.in  options.cmake
include/: delaunator.cpp  delaunator.hpp  delaunator_base_types.hpp  delaunator_concepts.hpp
test/: issue-8.cpp
